# Dagster_Azurite

./: .gitignore  Dockerfile_dagster  Dockerfile_user_code  How_to_start.md  README.md  dagster.yaml  docker-compose.yml  pyproject.toml  repo.py  repository.py  workspace.yaml
.dagster/.telemetry/: id.yaml
.dagster/history/: runs.db
.dagster/history/runs/: 075bcd63-f7f6-4789-93b6-8602d5109beb.db  0c68ff2a-be81-4838-a64b-3da18a4e66aa.db  0d94540c-8165-4dcc-984f-de9d76c290f7.db  1dafad78-10c0-4cf1-aa30-bd0d23ac2317.db  1f11b93d-5e33-4c6e-b180-09b7af435b99.db  2ea134c3-2b65-42ba-832f-97bbf52398e2.db  327a86a9-159a-4cf0-95fa-195d5f01c8e1.db  555dcb33-8924-430f-930b-ab9e43e0cebd.db  59d87702-1afe-4a70-bd3c-9d9e7cab037f.db  6a564029-2abf-4fc5-b69d-a038b83607e7.db  735dca31-4860-4b06-894b-e5df92f9f8ff.db  737cd903-90ff-45df-97b0-bda4ae7628b8.db  797e97f4-567b-4a6b-99c6-7713b5c3d8f4.db  8b72e3fd-55c4-40a4-8622-4b22e22cdd6f.db  9aaf01b1-fc92-4bde-aea8-8cd612edfb7c.db  a11d2c02-f6dd-4913-a8de-b91e0a59456d.db  a3122d78-a7a8-4188-a0f6-7f48f5cd795d.db  a4bd0b9d-32be-457f-9e26-9c5a608a6529.db  a9e42f64-cd05-4265-876d-fd8f812ba237.db  index.db  (+11 more)
.dagster/schedules/: schedules.db
assets/: schema.odg
backup_originals_docker/: docker-compose_original.yml
data_pipeline/: jobs.py  mock_azurite.py  ops.py  trigger.py
data_pipeline_complex/: jobs.py  ops.py  resources.py  trigger.py  utility.py
experimental/: check_on_data.py
flight_dask/: flight_dask.py
local_sampledata_folder/: sampledata.csv  sampledata.ods
sampledata/: sampledata.csv
sampledata_folder/: sampledata.csv
tmp5cyupl2r/history/: runs.db
tmp5cyupl2r/schedules/: schedules.db
(+274 files in other folders)
